# uniffi-dart

./: .gitignore  Cargo.toml  README.md  TODO.md  pr41_changes.patch  pr41_changes_text.patch  tracking_fixtures.md
.github/workflows/: tests.yml
fixtures/arithmetic/: Cargo.toml
fixtures/arithmetic/src/: lib.rs
fixtures/arithmetic/test/: simple_arithmetic_test.dart
fixtures/benchmarks/: Cargo.toml  build.rs
fixtures/benchmarks/src/: api.udl  lib.rs
fixtures/benchmarks/test/: benchmarks_test.dart
fixtures/benchmarks/tests/: mod.rs
fixtures/bytes_types/: Cargo.toml
fixtures/bytes_types/src/: api.udl  full api.udl  lib.rs
fixtures/bytes_types/test/: bytes_types_test.dart
fixtures/bytes_types/tests/: mod.rs
fixtures/callbacks/src/: lib.rs
fixtures/callbacks/test/: callbacks_test.dart
fixtures/dart_async/src/: api.udl  lib.rs
fixtures/dart_async/test/: futures_test.dart
fixtures/docstring/: Cargo.toml
fixtures/docstring-proc-macro/: Cargo.toml
fixtures/docstring-proc-macro/src/: api.udl  lib.rs
fixtures/docstring-proc-macro/test/: docstring_proc_macro_test.dart
fixtures/docstring-proc-macro/tests/: mod.rs
fixtures/docstring/src/: api.udl  lib.rs
fixtures/docstring/test/: docstring_test.dart
fixtures/docstring/tests/: mod.rs
fixtures/enum-types/: Cargo.toml  build.rs
fixtures/enum-types/src/: api.udl  lib.rs
fixtures/enum-types/test/: enum_types_test.dart
fixtures/enum-types/tests/: mod.rs
fixtures/error_types/test/: error_types_test.dart
fixtures/external_types_provider/: Cargo.toml  README.md  build.rs  uniffi.toml
fixtures/external_types_provider/consumer/: Cargo.toml  build.rs  uniffi.toml
fixtures/external_types_provider/consumer/src/: lib.rs  lib.udl
fixtures/external_types_provider/consumer/tests/: mod.rs
fixtures/external_types_provider/src/: lib.rs  lib.udl
fixtures/external_types_provider/test/: external_types_provider_test.dart
fixtures/external_types_provider/tests/: mod.rs
fixtures/hello_world/test/: hello_world_test.dart
fixtures/keywords/: Cargo.toml
fixtures/keywords/src/: api.udl
fixtures/keywords/test/: keywords_test.dart
fixtures/keywords/tests/: mod.rs
fixtures/large-error/: Cargo.toml
fixtures/large-error/src/: api.udl  lib.rs
fixtures/large-error/test/: large_error_test.dart
fixtures/large-error/tests/: mod.rs
fixtures/large_enum/src/: lib.rs
fixtures/large_enum/test/: large_enum_test.dart
fixtures/metadata/: Cargo.toml
fixtures/metadata/src/: api.udl  lib.rs
fixtures/metadata/test/: metadata_test.dart
fixtures/metadata/tests/: mod.rs
fixtures/proc-macro/: Cargo.toml
fixtures/proc-macro-no-implicit-prelude/: Cargo.toml
fixtures/proc-macro-no-implicit-prelude/src/: api.udl  callback_interface.rs  lib.rs
fixtures/proc-macro-no-implicit-prelude/test/: proc_macro_no_implicit_prelude_test.dart
fixtures/proc-macro-no-implicit-prelude/tests/: mod.rs
fixtures/proc-macro/src/: api.udl  callback_interface.rs  lib.rs
fixtures/proc-macro/test/: proc_macro_test.dart
fixtures/proc-macro/tests/: mod.rs
fixtures/simple-fns/: Cargo.toml  build.rs
fixtures/simple-fns/src/: api.udl  lib.rs
fixtures/simple-fns/test/: simple_fns_test.dart
fixtures/simple-fns/tests/: mod.rs
fixtures/simple-iface/: Cargo.toml
fixtures/simple-iface/src/: api.udl  lib.rs
fixtures/simple-iface/test/: simple_iface_test.dart
fixtures/simple-iface/tests/: mod.rs
fixtures/streams_ext/src/: lib.rs
fixtures/struct-default-values/: Cargo.toml
fixtures/struct-default-values/src/: api.udl  lib.rs
fixtures/struct-default-values/test/: struct_default_values_test.dart
fixtures/struct-default-values/tests/: mod.rs
fixtures/time-types/: Cargo.toml
fixtures/time-types/src/: api.udl  lib.rs
fixtures/time-types/test/: time_types_test.dart
fixtures/time-types/tests/: mod.rs
fixtures/trait-methods/: Cargo.toml
fixtures/trait-methods/src/: api.udl  lib.rs
fixtures/trait-methods/test/: trait_methods_test.dart
fixtures/type-limits/: Cargo.toml
fixtures/type-limits/src/: api.udl  lib.rs
fixtures/type-limits/test/: type_limits_test.dart
fixtures/type-limits/tests/: mod.rs
src/: gen.rs  testing.rs
