[package]
name = "struct_default_values"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
name = "struct_default_values"
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = { workspace = true }

[build-dependencies]
uniffi-dart = { path = "../../", features = ["build"] }

[dev-dependencies]
uniffi-dart = { path = "../../", features = ["bindgen-tests"] }
uniffi = { workspace = true, features = ["bindgen-tests"] }
anyhow = "1" 