[package]
name = "trait_methods"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
name = "trait_methods"
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = { workspace = true }
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi-dart = { path = "../../", features = ["build"] }

[dev-dependencies]
uniffi-dart = { path = "../../", features = ["bindgen-tests"] }
uniffi = { workspace = true, features = ["bindgen-tests"] }
anyhow = "1" 