[package]
name = "external_types_consumer"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "external_types_consumer"
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = { workspace = true }
external_types_provider = { path = ".." }

[build-dependencies]
uniffi-dart = { path = "../../../", features = ["build"] }

[dev-dependencies]
uniffi-dart = { path = "../../../", features = ["bindgen-tests"] }
uniffi = { workspace = true, features = ["bindgen-tests"] }
anyhow = "1" 